# vecnopool

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  pool.db
proto/: p2p.proto  protowire.proto
src/: api.rs  config.rs  database.rs  lib.rs  main.rs  metrics.rs  pow.rs  stratum.rs  uint.rs  vecnod.rs
src/database/: db.rs
src/stratum/: jobs.rs  mod.rs  protocol.rs  server.rs  variable_difficulty.rs  worker_stats.rs
src/treasury/: mod.rs  payout.rs  reward_table.rs  share_validator.rs  sharehandler.rs
src/wasm/: mod.rs  package.json  run_vecno.js  test.js  utils.js
src/wasm/data/: config.json
wasm/: package.json  run_wasm.js  vecno.d.ts
