[package]
name = "vecnod-stratum"
authors = ["fungibilly <fungibilly@proton.me>"]
license = "MIT"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0"
blake3 = "1.8.2"
env_logger = "0.9"
hex = "0.4"
log = "0.4"
prost = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.7"
rand = "0.8"
http = "0.2"
chrono = "0.4.41"
rusqlite = { version = "0.29", features = ["bundled"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
dashmap = "5.4"
clap = { version = "4.0", features = ["derive"] }
dotenv = "0.15.0"
num-traits = "0.2.19"
prometheus = "0.13"
lazy_static = "1.4"
reqwest = { version = "0.11", features = ["json"] }
tokio-retry = "0.3"
futures = "0.3"
warp = "0.3"
hyper = { version = "0.14", features = ["server", "http1"] }

[build-dependencies]
tonic-build = "0.7"