[package]
name = "vecnod-stratum"
authors = ["yooshikii <yooshikii@vecnofoundation.org>"]
license = "MIT"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0.89"
blake3 = "1.5.4"
env_logger = "0.11.5"
hex = "0.4.3"
log = "0.4.22"
prost = "0.13.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = "0.1.16"
tonic = "0.12.3"
rand = "0.8.5"
http = "1.1.0"
chrono = "0.4.38"
rusqlite = { version = "0.32.1", features = ["bundled"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }
dashmap = "6.1.0"
clap = { version = "4.5.18", features = ["derive"] }
dotenv = "0.15.0"
num-traits = "0.2.19"
prometheus = "0.13.4"
lazy_static = "1.5.0"
reqwest = { version = "0.12.7", features = ["json"] }
tokio-retry = "0.3.0"
futures = "0.3.30"
warp = "0.3.7"
hyper = { version = "0.14", features = ["server", "tcp", "http1"] }

[build-dependencies]
tonic-build = "0.12.3"