[package]
name = "vecnopool"
authors = ["yooshikii <yooshikii@vecnofoundation.org>"]
license = "MIT"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0.89"
blake3 = "1.5.4"
env_logger = "0.11.5"
hex = "0.4.3"
log = "0.4.22"
prost = "0.13.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = "0.1.16"
tonic = "0.12.3"
rand = "0.8.5"
http = "1.1.0"
chrono = "0.4.38"
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "postgres"] }
dashmap = "6.1.0"
dotenv = "0.15.0"
tokio-retry = "0.3.0"
primitive-types = "0.12"
once_cell = "1.21.3"

[build-dependencies]
tonic-build = "0.12.3"
